--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
   <link href="./assets/css/sb-admin-2.min.css" rel="stylesheet">
 
 </head>
-<body id="page-top">
+<body id="page-top" class="bg-gradient-primary">
 
   <app-root></app-root>
   <!-- Scroll to Top Button-->
@@ -38,7 +38,7 @@
         <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
         <div class="modal-footer">
           <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-          <a class="btn btn-primary" href="login.html">Logout</a>
+          <a class="btn btn-primary" routerLink="login.html">Logout</a>
         </div>
       </div>
     </div>
@@ -52,5 +52,10 @@
 
   <!-- Custom scripts for all pages-->
   <script src="./assets/js/sb-admin-2.min.js"></script>
+  <script src="./assets/vendor/chart.js/Chart.min.js"></script>
+
+  <!-- Page level custom scripts -->
+  <script src="./assets/js/demo/chart-area-demo.js"></script>
+  <script src="./assets/js/demo/chart-pie-demo.js"></script>
 </body>
 </html>
