--- a/src/index.html
+++ b/src/index.html
@@ -43,5 +43,18 @@
       </div>
     </div>
   </div>
+
+  <script src="/assets/vendor/jquery/jquery.min.js"></script>
+  <script src="/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Core plugin JavaScript-->
+<!--  <script src="/assets/vendor/jquery-easing/jquery.easing.min.js"></script>-->
+
+  <!-- Custom scripts for all pages-->
+  <script src="/assets/js/sb-admin-2.min.js"></script>
+
+  <!-- Page level plugins -->
+  <script src="/assets/vendor/chart.js/Chart.min.js"></script>
+
 </body>
 </html>
